[tool.poetry]
name = "controller"
version = "0.1.0"
description = ""
authors = ["ThatXliner <bryan.hu.2020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyserial = "^3.5"
pygtrie = "^2.5.0"
rich = "^13.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["ALL"]
ignore = ["FBT", "D"]
